--- a/lua/menu/main_menu.css
+++ b/lua/menu/main_menu.css
@@ -219,9 +219,10 @@ window.main_frame
 window.main_frame image.logo
 {
     height: 192px;
-    width: 768px;
-    left: 45%;
-    top: 10px;
+    width: 600px;
+    horizontal-align: right;
+    right: 220px;
+    top: 60px;
     background-image: path(ui/menu/logo.dds) coords(0.0,0.0,1.0,1.0);
 }
 
@@ -232,7 +233,7 @@ window.main_frame image.scanline
     width: 100%;
     top: -64px;
     bottom: -64px time(4);
-    background-color: rgba(0.756, 0.952, 0.988, 1);
+    background-color: rgba(0.756, 0.952, 0.988, 0);
     background-image: path(ui/menu/scanLine_big.dds) coords(0.0,0.0,1.0,1.0);
 }
 
@@ -437,29 +438,34 @@ link.play
     top: 120px;
 }
 
-link.tutorial
+link.news
 {
     top: 190px;
 }
 
-link.options
+link.tutorial
 {
     top: 260px;
 }
 
-link.mods
+link.options
 {
     top: 330px;
 }
 
-link.credits
+link.mods
 {
     top: 400px;
 }
 
-link.exit
+link.credits
 {
     top: 470px;
+}
+
+link.exit
+{
+    top: 540px;
 }
 
 link.resume_ingame font, link.readyroom_ingame font, link.vote_ingame font, link.play_ingame font, link.options_ingame font, link.tutorial_ingame font, link.disconnect_ingame font
